# FaceEngineGUI

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/FaceEngineGUI/: AnimationManager.h  Canvas.h  TransformManager.h  UIComponent.h
include/FaceEngineGUI/Animations/: Animation.h  Transition.h
include/FaceEngineGUI/Components/: Button.h  Checkbox.h  Container.h  DialogBox.h  Dropdown.h  Label.h  Scrollbar.h  Slider.h  Sprite.h  Stepper.h  Textbox.h
include/FaceEngineGUI/TextureDesign/: Border.h  ColourScheme.h  CornerEffect.h  Fill.h  NativeTexture.h  TextureFactory.h  VisualEffect.h
include/FaceEngineGUI/TextureDesign/Fills/: LinearGradientFill.h  SolidFill.h
include/FaceEngineGUI/Transforms/: MeasurementPoint.h  UIScale.h  UITranslation.h
include/FaceEngineGUI/Transforms/Scales/: PixelScale.h  RelativeScale.h
include/FaceEngineGUI/Transforms/Translations/: CentreTranslation.h  PixelTranslation.h  RelativeTranslation.h
include/FaceEngineGUI/Util/: TypingSession.h  UIButtonState.h
src/: AnimationManager.cpp  Canvas.cpp  TransformManager.cpp  UIComponent.cpp
src/Animations/: Animation.cpp  Transition.cpp
src/Components/: Button.cpp  Checkbox.cpp  DialogBox.cpp  Dropdown.cpp  Label.cpp  Scrollbar.cpp  Slider.cpp  Sprite.cpp  Stepper.cpp  Textbox.cpp
src/TextureDesign/: ColourScheme.cpp  NativeTexture.cpp  TextureFactory.cpp
src/TextureDesign/Fills/: LinearGradientFill.cpp  SolidFill.cpp
src/Transforms/Scales/: PixelScale.cpp  RelativeScale.cpp
src/Transforms/Translations/: CentreTranslation.cpp  PixelTranslation.cpp  RelativeTranslation.cpp
src/Util/: TypingSession.cpp
tools/: build-win64.bat
